# rust_play

./: .gitignore
channels/: Cargo.toml
channels/src/: lib.rs
fib-iterator/: Cargo.toml
fib-iterator/src/: main.rs
gameoflife/: Cargo.toml  LICENSE_MIT  README.md
gameoflife/src/: lib.rs
gas-station/: Cargo.toml  spec.md
gas-station/src/: main.rs
gitcli/: Cargo.toml
gitcli/src/: main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
iterators/: Cargo.toml
iterators/src/: lib.rs
rustlings/exercises/clippy/: clippy2.rs
rustlings/exercises/enums/: enums3.rs
rustlings/exercises/error_handling/: errors3.rs  result1.rs
rustlings/exercises/if/: if1.rs
rustlings/exercises/option/: option2.rs
rustlings/exercises/primitive_types/: primitive_types2.rs  primitive_types4.rs
rustlings/exercises/standard_library_types/: arc1.rs  box1.rs  iterators2.rs  iterators3.rs  iterators4.rs
rustlings/exercises/structs/: structs2.rs  structs3.rs
rustlings/exercises/traits/: traits1.rs  traits2.rs
sorting-algo/: Cargo.toml
sorting-algo/src/: bubblesort.rs  lib.rs
strsplit/: Cargo.toml
strsplit/src/: lib.rs
twitter-clone/backend/: .env  .gitignore  Cargo.toml
twitter-clone/backend/src/: main.rs
twitter-clone/backend/src/tests/: mod.rs  test_helpers.rs
utxo-workshop/runtime/src/: utxo.rs
vecimple/: Cargo.toml
vecimple/src/: lib.rs
