[package]
name = "backend"
version = "0.1.0"
authors = ["Esraa Jbara <jbesraa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.5.0", features = ["attributes", "unstable"]}
tide = "0.8.0"
sqlx = {version = "0.3.4", features = ["runtime-async-std", "macros", "chrono", "json", "postgres", "uuid"]} 
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"
chrono = "0.4.11"
log = "0.4.8"
serde = {version = "1.0.106", features = ["derive"]}
serde_json = "1.0.52"
uuid = {version = "0.8.1", features = ["serde", "v4"]}
thiserror = "1.0.20"
http-service = "0.5.0"
futures = "0.3.5"
http-types = "1.3.1"
assert-json-diff = "1.1.0"
rand = "0.7.3"

[dev-dependencies]
http-service-mock = "0.5.0"
